--- a/3 Car Analysis (Recommended 3)/Car-Analysis.html
+++ b/3 Car Analysis (Recommended 3)/Car-Analysis.html
@@ -446,6 +446,9 @@ point</h1>
 </div>
 
 
+<p><br></p>
+<p><a href="https://zesty-kheer-8ce4a9.netlify.app/"><span style="font-size: larger;">CLICK HERE TO SEE HTML VERSION (Better
+Format)</span></a></p>
 <p><br> This analysis will use a linear model to predict the selling
 price for my vehicle when it reaches 220,000 miles.This is assuming
 every year I’ve been using it for 20~25 thousand miles. To know what
