--- a/2 House Prices Analysis (Recommended 2)/House-Prices-Analysis.html
+++ b/2 House Prices Analysis (Recommended 2)/House-Prices-Analysis.html
@@ -2903,6 +2903,10 @@ display: none;
 </div>
 
 
+<p><br></p>
+<p><a href="https://gentle-meringue-8bb3f3.netlify.app/"><span style="font-size: larger;">CLICK HERE TO SEE RENDRED HTML VERSION
+(Better Format)</span></a></p>
+<p><br></p>
 <div id="section" class="section level1 tabset tabset-pills tabset-fade">
 <h1 class="tabset tabset-pills tabset-fade"></h1>
 <div id="total-square-feet-analysis" class="section level2">
