--- a/5 Logistic Prediction (Recommended 5)/Predicting-Math-325-Final-Scores.html
+++ b/5 Logistic Prediction (Recommended 5)/Predicting-Math-325-Final-Scores.html
@@ -449,6 +449,10 @@ display: none;
 </div>
 
 
+<p><br></p>
+<p><a href="https://papaya-semolina-8e58ef.netlify.app/"><span style="font-size: larger;">CLICK HERE TO SEE RENDRED HTML VERSION
+(Better Format)</span></a></p>
+<p><br></p>
 <div id="section" class="section level1 tabset tabset-pills tabset-fade">
 <h1 class="tabset tabset-pills tabset-fade"></h1>
 <div id="introduction" class="section level2">
